saveimage agora usando variavel js para nome do arquivo

--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -254,9 +254,10 @@
 
   </script>
 
-  {% with file_name="calendario" %}
-    {% include "save_image.html" %}
-  {% endwith %}
+  <script>
+    var save_image_file_name = "calendario_capstone";
+  </script>
+  {% include "save_image.html" %}
 
   <div id="tudo">
 
