deixando barra azul

--- a/academica/templates/academica/exames_pesos.html
+++ b/academica/templates/academica/exames_pesos.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% comment %}
-    Desenvolvido para o Projeto Final de Engenharia
-    Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-    Data: 3 de Dezembro de 2023
+  Desenvolvido para o Projeto Final de Engenharia
+  Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
+  Data: 3 de Dezembro de 2023
 {% endcomment %}
 
 {% block head %}
@@ -12,7 +12,7 @@
   <script src="{% static 'js/w3.js' %}"></script>
 
   <style>
-    thead {background-color: #bee5eb;}
+    thead {background-color: #BEE5EB;}
     th, td {
       padding-left: 4px;
       padding-right: 4px;
