--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
   <style>
     th {
-      background-color: #E6E6E6;
+      background-color: #BEE5EB;
       padding: 0px 3px 0px 3px;
     }
     thead tr:nth-of-type(2) th {
