--- a/templates/pares.html
+++ b/templates/pares.html
@@ -27,7 +27,7 @@
             {% else %}
               <span style="color:brown">Aguardando Confirmação de Orientador</span>
             {% endif %}
-          {% else %} <span style="color:#DDB300">Aguardando Avaliação de Pares pelo Estudante</span>
+          {% else %} <span style="color:#DDB300">Aguardando Preenchimento por Estudante </span>
           {% endif %}
         </td>
       {% endwith %}
