--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -53,7 +53,7 @@
         {% include "edicoes.html" with com_cursos=True com_tipos=True %}
         <br>
 
-        <div class="atualizar" style="line-height:80%;">
+        <div class="atualizar">
 
             <div class="2areas2" style="line-height: 1.3;">
                 <ul class="chart">
@@ -83,12 +83,14 @@
                 </ul>
             </div>
 
-            <b>Outras:</b> 
-            {% for outra in outras %}
-                {{outra.outras}}{% if not forloop.last %},{% endif %}
-            {% endfor %}
+            <div style="line-height: 1;">
+                <b>Outras:</b> X
+                {% for outra in outras %}
+                    {{outra.outras}}{% if not forloop.last %},{% endif %}
+                {% endfor %}
+            </div>
 
-            <br><br>
+            <br>
             {% if tipo == "estudantes" %}
                 Total de Estudantes: {{total}} <small>(total de estudantes que preencheram algum campo: {{total_preenchido}})</small><br>
             {% elif tipo == "propostas" %}
