corrigindo link do rel da banca

--- a/templates/ver_documentos.html
+++ b/templates/ver_documentos.html
@@ -20,7 +20,7 @@
             <span class="opt_short">{{ documento.data|date:"d/m/y H:i" }}</span>
             <a 
                 {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
-                href="{{request.build_absolute_uri}}/{{documento.id}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+                href="{% url 'banca_avaliar' banca.slug %}/{{documento.id}}" target="_blank" rel="noopener noreferrer">(documento)</a>
             <a 
                 {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
                 href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
@@ -28,7 +28,7 @@
             {% if documento.documento %}
                 <a 
                 {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
-                href="{{request.build_absolute_uri}}/{{documento.id}}" target="_blank" rel="noopener noreferrer"><span lang="pt">Entregue</span><span lang="en">Submitted</span>
+                href="{% url 'banca_avaliar' banca.slug %}/{{documento.id}}" target="_blank" rel="noopener noreferrer"><span lang="pt">Entregue</span><span lang="en">Submitted</span>
                 <span class="opt_full">{{ documento.data|date:"DATETIME_FORMAT" }}</span>
                 <span class="opt_short">{{ documento.data|date:"d/m/y H:i" }}</span>
                 </a>
